8269807: Implement the fix for JDK-8269240 in the panama-foreign repo
Reviewed-by: mcimadamore